updated my profile

--- a/MyCreations/Creation 1/index.html
+++ b/MyCreations/Creation 1/index.html
@@ -63,6 +63,46 @@
         </div>
 
     </header>
+
+    <!-- About Section -->
+    <section class="aboutMe">
+        <div class="container items-center">
+            <h1>About <span>Me</span></h1>
+            <h3>Hello I'm <span>Aashish Anand</span></h3>
+            <p>
+                I am Software Developer at <span>Amdocs</span>. Holding a BTech. in Software Engineering, Delhi Technological University. With about 2+ years of hands on experince with microservice architecture. I'm looking for new ventures where I can
+                apply my expertise, learn and evolve.
+            </p>
+        </div>
+    </section>
+
+    <!-- Projects Sections -->
+    <section class="projects">
+        <div class="container">
+            <h1 class="section-heading"><span>My</span> Projects</h1>
+            <div class="card-wrapper">
+                <div class="card">
+                    <img class="project-logo" src="images/ml.svg" style="background-color: #3DCFD3;">
+                    <h2>Food and Non-Food Image Recognition</h2>
+                    <p>Developed a software that can distinguish between the food and non-food image with 86-91% accuracy</p>
+                    <a href="#"><img class="link-logo" src="images/link.svg"></a>
+                </div>
+                <div class="card">
+                    <img class="project-logo" src="images/code.svg" style=" background-color: #3DCFD3;">
+                    <h2>Online Test Conducting System</h2>
+                    <p>Developed the complete end-to-end project to conduct a test to check student progress in desired field.</p>
+                    <a href="#"><img class="link-logo" src="images/link.svg"></a>
+                </div>
+                <div class="card">
+                    <img class="project-logo" src="images/ml.svg" style="background-color: #3DCFD3;">
+                    <h2>Facial Expression Recognition</h2>
+                    <p>Developed a software that can recognize the facial expression i.e. happy, sad, angry, disgust, fear, surprise and neutral.</p>
+                    <a href="#"><img class="link-logo" src="images/link.svg"></a>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
